--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,40 @@
+#title {
+  position: relative;
+}
 
-.background {
-  background-image: url("images/building.jpg");
+#features {
+  background-color: #ECEFF4;
+  padding: 4rem 2rem;
+  text-align: center;
+}
+
+#features p {
+  margin: 20px;
+}
+
+h1, h3 {
+    font-family: 'Source Serif Pro', serif;
+    font-weight: bold;
+}
+
+p, button, nav {
+    font-family: 'Montserrat', sans-serif;
+}
+
+.back {
+  background-image: url("../images/hills.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  height: 90vh;
+  height: 100vh;
   width: 100%;
   /* opacity: 0.7; */
+}
+
+.heading {
+  text-align: center;
+  line-height: 2;
+  position: relative;
+  color: #fff;
+  padding: 0 50px;
+  top: 5rem;
 }
